# algol

./: README.md
algol60/: Trabb-Pardo-Knuth.a60  acm10  acm10.alg  acm10.c  acm11  acm11.alg  acm11.c  acm2.alg  acm3.alg  acm33  acm33.alg  acm33.c  acm4.alg  acm414.alg  acm414.algol  acm507.alg  acm514.a60  acm8.alg  acm9.alg.incomplete  algol.pats  example.foogol  knuth-man-boy.a60  quadi.alg  sqrt.a60  sqrt.alg  test.a60
algol60/elliott/: Elliott 803 Simulation - ALGOL.html
algol60/ex/: gps.alg  gps.c
algol60/ex/nase-a60/: serp.a60  teul1.a60  teul2.a60  whetstone.a60
algol60/lang/a60-0.20a/: ChangeLog  Makefile  Makefile.in  README  RRA60-a4.ps  RRA60-us.ps  RRA60.info  a60  a60-lex.l  a60-mkc.inc  a60-parse.y  a60-ptab.c  a60.info  a60.ps  a60.texinfo  bb.out  block.h  bltin.c  config.cache  config.status  conv.h  doeval.c  err.c  eval.c  expr.c  expr.h  run.c  run.h  symtab.c  version.h
algol60/lang/a60-0.20a/examples/: Makefile  README
algol60/lang/a60-0.20a/micro/: README  vc_a60.mak
algol60/lang/a60-0.20a/test/: Makefile  syntax.a60
algol60/lang/a60-0.22a/: Makefile.in  RRA60.ps  TODO  a60  a60-mkc.inc  a60.info  a60.man  bb.out  comm.h.bck  config.status  gmon.out  symtab.c  util.h.bck  xa60  xa60.man
algol60/lang/a60-0.22a/examples/: runexamp.sh
algol60/lang/a60-0.22a/test/: goto.a60  input.a60
algol60/lang/aw2c/: Algol%20W.html
algol60/lang/aw2c/aw2c/: Makefile  VERSION  alwio.c  alwio.dot  alwstd.cmi  alwstd.cmo  aw2c  aw2c.1  aw2c.cmi  aw2c.cmo  aw2c.html  class.cmi  class.cmo  code.cmi  code.cmo  codeGen.cmi  codeGen.cmo  dynArray.cmi  dynArray.cmo  (+27 more)
algol60/lang/compilers/: COMPILERS.html
algol60/lang/marst-2.2/: AUTHORS  ChangeLog  INDEX  INSTALL  Makefile  Makefile.in  README  THANKS  abs.alg  abs.c  alglib.c  algol.h  arctan.c  bb.out  config.status  configure  configure.in  cos.c  entier.c  epsilon.alg  epsilon.c  exp.alg  exp.c  fault.alg  fault.c  iabs.alg  iabs.c  inchar.c  inint.c  inreal.c  length.alg  length.c  ln.c  macvt  macvt.1  macvt.c  marst  marst.1  marst.c  marst.html  (+25 more)
algol60/lang/nase_a60/: Revised Report on the Algorithmic Language Algol 60.html
algol60/lbb/: index.html
algol60/lib/: arctan.alg  cos.alg  entier.alg  inchar.alg  inint.alg  inreal.alg  ln.alg  maxint.alg  minreal.alg  outint.alg
algol60/nase_a60/: README-0.22
algol60/nase_a60/a60-0.22a/: ChangeLog  ENUM.README  Makefile.unx  a60-parse.y  a60-ptab.c.bck  a60-ptab.h  a60.h.bck  a60.html.bck  a60.ps  config.cache  config.h.in  configure.bck  configure.in  eval.c.bck  mkc.c.bck  mkc.h  symtab.h  type.h  xa60  xa60.c.bck
algol60/nase_a60/a60-0.22a/micro/: README
algol60/nase_a60/a60-0.22a/test/: cond.a60.bck  dirty.a60  goto.outp  input.inp.bck  input.outp  outstr.a60.bck  outstr.outp.bck  procp.outp  runctes.sh  runtest.sh
algol60/rra60/: index.html  report.htm
algol60/test/: runtest.sh
algol68/: .a68.dump  .a68.w1  strassen.a68  treemerge.a68  y.a68
algol68/ella/: README  Release-notes  a68library.tar  biops.tar  cmodes.tar  ctrans.tar  ella.tar  external.tar  i386emx.tar  include.tar  library.tar  manage.tar  mm.tar  osif.tar  oslib.tar  ostools.tar  prover.tar  sim.tar  sunos.tar  transform.tar
algol68/examples/: Makefile  tt1.a68  tt1data.a68
algol68/examples/CVS/: Entries  Repository  Root
algol68/sample/: .a68.w1  .a68.w2  01.a68  02.a68  03.a68  04.a68  05.a68  06.a68  07.a68  08.a68  09.a68  10.a68  11.a68  12.a68  13.a68  14.a68  15.a68  16.a68  17.a68  17a.a68  18.a68  19.a68  20.a68  21.a68  22.a68  a.a68  b.a68  c.a68  d.a68  e.a68  f.a68  g.a68
(+208 files in other folders)
